2022-07-15         [RELEASE] Release of t3import_export 1.0.3 (Vladimir Falcon)
2022-07-11 3c5d31f Fixed package dependency (Vladimir Falcon Piva)
2022-07-05 9cefbb1 [CI] TYPO3 version disabled 9 in matrix, test TYPO3 10 with PHP 8 (Dirk Wenzel)
2022-07-05 037a5d6 [CI] set composer version in matrix (Dirk Wenzel)

2022-07-04         [RELEASE] Release of t3import_export 1.0.2 (Dirk Wenzel)
2022-07-04 1340a1a [BUGFIX] reference to table non-existing table removed (Dirk Wenzel)
2022-07-04 0380e13 code cleanup (Dirk Wenzel)

2022-07-04         [RELEASE] Release of t3import_export 1.0.1 (Dirk Wenzel)
2022-07-04 57a0000 [BUGFIX] legacy Extbase CommandControllers restored for TYPO3 9 (Dirk Wenzel)
2022-07-04 8aa0b3e [CI] allow composer-plugin typo3/cms-composer-installers (Dirk Wenzel)
2022-07-04 3e00a96 [CI]  allow some composer plugins, test matrix updated (Dirk Wenzel)

2022-07-04         [RELEASE] Release of t3import_export 1.0.0 (Dirk Wenzel)
2022-07-01 bfcfa02 using Status static class for task status (Arend Maubach)
2022-06-29 6fd14b6 fixing command status issue in lower version of typo3 (Arend Maubach)
2022-06-29 2568313 [TASK] register console commands for backend modules but not for cli environment in TYPO3 < 10 (Dirk Wenzel)
2022-06-29 9b96c94 [TASK] obsolete test removed (Dirk Wenzel)
2022-06-21 2de1812 [TASK] DataSourceDummy and DataTargetDummy implemented (Dirk Wenzel)
2022-06-21 3e5c796 [BREAKING][TASK] DataSourceInterface no longer extends ConfigurableInterface DataTransferProcessor now gets configuration only from instances of ConfigurableInterface. Migration: implement ConfigurableInterface explicitly if your custom data source requires a configuration (Dirk Wenzel)
2022-06-20 b7b86d2 [TASK] unit tests for DataTransferProcessor adapted (Dirk Wenzel)
2022-06-20 0be3534 [BUGFIX] mismatch in method signature fixed (Dirk Wenzel)